--- a/src/components/TodoGroup.css
+++ b/src/components/TodoGroup.css
@@ -1,17 +1,29 @@
-.todo-group__box{
-    margin-bottom: 2rem;
+.todo-group__box {
+  margin-bottom: 2rem;
+  padding: 1rem;
+  border-radius: 3px;
 }
 
-h2{
-    text-align: left;
-    margin-bottom: 0.5rem;
+.todo-group__box:nth-child(odd) {
+  background-color: #ddd;
+  color: #333;
+}
+
+.todo-group__box:nth-child(even) {
+  background-color: #333;
+  color: white;
+}
+
+h2 {
+  text-align: left;
+  margin-bottom: 0.5rem;
 }
 
 ul {
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
 }
