--- a/src/index.css
+++ b/src/index.css
@@ -1,35 +1,40 @@
 :root {
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-    font-weight: 400;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-weight: 400;
 
-    color-scheme: light dark;
-    color: rgba(255, 255, 255, 0.87);
-    background-color: #242424;
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
 
-    font-synthesis: none;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 *,
 *::after,
 *::before {
-    box-sizing: inherit;
-    
-    margin: 0;
-    padding: 0;
+  box-sizing: inherit;
+
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    box-sizing: border-box;
-    display: flex;
-    place-items: center;
-    min-width: 320px;
-    min-height: 100vh;
-    font-size: 1.4rem;
+  box-sizing: border-box;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
+  font-size: 1.4rem;
+}
+
+svg path,
+svg rect {
+  stroke: #eee;
 }
