--- a/src/components/TodoGroup.css
+++ b/src/components/TodoGroup.css
@@ -1,18 +1,34 @@
 .todo-group__box {
   margin-bottom: 2rem;
   padding: 1rem;
-  border-radius: 3px;
+  border-radius: 8px;
+  background-color: var(--color-primary-1);
+  color: var(--color-text);
+
+  /* transition: all 300ms ease;
+  overflow-y: hidden;
+  height: 100rem; */
 }
 
-.todo-group__box:nth-child(odd) {
-  background-color: #ddd;
-  color: #333;
-}
+/* .todo-group__box.collapse {
+  transition: all 300ms ease;
+  height: 5rem;
+} */
 
-.todo-group__box:nth-child(even) {
-  background-color: #333;
-  color: white;
+.todo-title__box {
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  svg {
+    width: 4rem;
+    height: 4rem;
+  }
 }
+/* .todo-group__box:nth-child(even) {
+  background-color: var(--color-primary-2);
+  color: var(--color-white);
+} */
 
 h2 {
   text-align: left;
@@ -26,4 +42,13 @@ ul {
   align-items: center;
   justify-content: center;
   gap: 1rem;
+  overflow-y: hidden;
+
+  transition: all 0.5s ease;
+  max-height: 200px;
+}
+
+ul.collapse {
+  transition: all 0.5s ease;
+  max-height: 0;
 }
